populates 200 top unis

--- a/Web-scraping/scrap_wiki.ipynb
+++ b/Web-scraping/scrap_wiki.ipynb
@@ -199,6 +199,25 @@
     "#         # empty table row/header\n",
     "#         pass"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "uni_ranking_url = \"https://www.4icu.org/top-universities-world/\"\n",
+    "\n",
+    "page = requests.get(uni_ranking_url)\n",
+    "soup_ranking = BeautifulSoup(page.content, 'html.parser')\n",
+    "universities = []\n",
+    "table = soup_ranking.find(\"table\", class_=\"table table-hover\")\n",
+    "for tr in table.find_all('tr')[1:]:\n",
+    "    universities.append(tr.find_all(\"td\")[1].text)\n",
+    "\n",
+    "universities = pd.DataFrame(universities)\n",
+    "universities.to_csv(\"universities.csv\", index=None)"
+   ]
   }
  ],
  "metadata": {
