Implemented faculty search attempts

--- a/Web-scraping/scrap_wiki.ipynb
+++ b/Web-scraping/scrap_wiki.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "\n",
-    "uni_names = pd.read_csv(\"./universities.txt\", header=None)\n",
+    "uni_names = pd.read_csv(\"./universities.csv\", header=None)\n",
     "\n",
     "uni_names.columns = ['name']\n",
     "\n",
@@ -24,24 +24,238 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "Massachusetts Institute of Technology\n",
+      "Harvard University\n",
+      "Stanford University\n",
+      "University of California, Berkeley\n",
+      "Purdue University\n",
+      "Cornell University\n",
+      "University of Washington\n",
+      "Columbia University in the City of New York\n",
+      "University of Michigan\n",
+      "Penn State University\n",
+      "University of Minnesota\n",
+      "University of Wisconsin-Madison\n",
+      "University of California, Los Angeles\n",
+      "New York University\n",
+      "University of Pennsylvania\n",
+      "University of Toronto\n",
+      "Yale University\n",
+      "The University of Texas at Austin\n",
+      "University of Oxford\n",
+      "Princeton University\n",
+      "Carnegie Mellon University\n",
+      "University of Southern California\n",
+      "The University of British Columbia\n",
+      "University of California, Irvine\n",
+      "University of Colorado Boulder\n",
+      "University of Illinois at Urbana-Champaign\n",
+      "University of Cambridge\n",
+      "Arizona State University\n",
+      "University of Chicago\n",
+      "Johns Hopkins University\n",
+      "University of California, San Diego\n",
+      "Michigan State University\n",
+      "The University of Arizona\n",
+      "University of Florida\n",
+      "Rutgers, The State University of New Jersey\n",
+      "Northwestern University\n",
+      "Shanghai Jiao Tong University\n",
+      "Texas A&M University\n",
+      "Duke University\n",
+      "Fudan University\n",
+      "Boston University\n",
+      "University of California, Davis\n",
+      "The University of Utah\n",
+      "University of North Carolina at Chapel Hill\n",
+      "University of Maryland\n",
+      "The University of Edinburgh\n",
+      "Universidad Nacional Autónoma de México\n",
+      "The Ohio State University\n",
+      "University of Waterloo\n",
+      "Universidade de São Paulo\n",
+      "McGill University\n",
+      "North Carolina State University\n",
+      "Georgia Institute of Technology\n",
+      "University of Virginia\n",
+      "Guangxi University\n",
+      "Eidgenössische Technische Hochschule Zürich\n",
+      "University College London\n",
+      "University of Pittsburgh\n",
+      "King Saud University\n",
+      "Simon Fraser University\n",
+      "Washington University in St. Louis\n",
+      "Virginia Polytechnic Institute and State University\n",
+      "Florida State University\n",
+      "Indiana University Bloomington\n",
+      "Iowa State University of Science and Technology\n",
+      "University of California, Santa Barbara\n",
+      "University of Massachusetts Amherst\n",
+      "The University of New South Wales\n",
+      "National University of Singapore\n",
+      "Oregon State University\n",
+      "University of Alberta\n",
+      "University of Houston\n",
+      "George Mason University\n",
+      "Tsinghua University\n",
+      "Georgetown University\n",
+      "Colorado State University\n",
+      "California Institute of Technology\n",
+      "Brigham Young University\n",
+      "Georgia State University\n",
+      "University of Nebraska-Lincoln\n",
+      "University of South Florida\n",
+      "Brown University\n",
+      "University of Georgia\n",
+      "The University of Sydney\n",
+      "Tufts University\n",
+      "University of Tehran\n",
+      "University of Iowa\n",
+      "University of Delaware\n",
+      "The University of Melbourne\n",
+      "University of Oregon\n",
+      "George Washington University\n",
+      "The University of Tokyo\n",
+      "The University of Manchester\n",
+      "Universitat de Barcelona\n",
+      "Peking University\n",
+      "Dartmouth College\n",
+      "Washington State University\n",
+      "University of Rochester\n",
+      "University of Notre Dame\n",
+      "University of Calgary\n",
+      "Universitetet i Oslo\n",
+      "Ruhr-Universität Bochum\n",
+      "Katholieke Universiteit Leuven\n",
+      "Vanderbilt University\n",
+      "University of California, Santa Cruz\n",
+      "University at Buffalo, State University of New York\n",
+      "Universität Wien\n",
+      "Ludwig-Maximilians-Universität München\n",
+      "Anadolu Üniversitesi\n",
+      "Norges teknisk-naturvitenskaplige universitet\n",
+      "York University\n",
+      "The London School of Economics and Political Science\n",
+      "Politecnico di Milano\n",
+      "University of Illinois at Chicago\n",
+      "National Research University Higher School of Economics\n",
+      "Moscow State University\n",
+      "University of Leeds\n",
+      "Rice University\n",
+      "University of Glasgow\n",
+      "Nanyang Technological University\n",
+      "Zhejiang University\n",
+      "The University of Hong Kong\n",
+      "Temple University\n",
+      "The Chinese University of Hong Kong\n",
+      "Syracuse University\n",
+      "National Taiwan University\n",
+      "The University of Queensland\n",
+      "University of Central Florida\n",
+      "Queen's University\n",
+      "Universidad Complutense de Madrid\n",
+      "Københavns Universitet\n",
+      "University of California, San Francisco\n",
+      "University of Kentucky\n",
+      "The University of Nottingham\n",
+      "Australian National University\n",
+      "Emory University\n",
+      "Rheinisch-Westfälische Technische Hochschule Aachen\n",
+      "University of Southampton\n",
+      "Northeastern University\n",
+      "The University of Oklahoma\n",
+      "Kyoto University\n",
+      "The University of Tennessee, Knoxville\n",
+      "University of California, Riverside\n",
+      "University of Kansas\n",
+      "Freie Universität Berlin\n",
+      "Heriot-Watt University\n",
+      "Tecnológico de Monterrey\n",
+      "Louisiana State University\n",
+      "The University of Warwick\n",
+      "Rochester Institute of Technology\n",
+      "Helsingin yliopisto\n",
+      "San Diego State University\n",
+      "University of Connecticut\n",
+      "École Polytechnique Fédérale de Lausanne\n",
+      "University of New Mexico\n",
+      "Université de Strasbourg\n",
+      "McMaster University\n",
+      "Universitat de València\n",
+      "Western University\n",
+      "Monash University\n",
+      "Imperial College London\n",
+      "Università degli Studi di Bologna\n",
+      "University of Victoria\n",
+      "University of South Carolina\n",
+      "Universiteit Gent\n",
+      "University of Missouri\n",
+      "University of Science and Technology of China\n",
+      "Virginia Commonwealth University\n",
+      "University of Miami\n",
+      "The University of Adelaide\n",
+      "Kent State University\n",
+      "University of Cincinnati\n",
+      "Kungliga Tekniska högskolan\n",
+      "Florida International University\n",
+      "Università degli Studi di Milano\n",
+      "Université de Montréal\n",
+      "Universidad de Granada\n",
+      "Université Laval\n",
+      "Technische Universität München\n",
+      "Universitas Gadjah Mada\n",
+      "Wuhan University\n",
+      "Technische Universiteit Delft\n",
+      "University of Pretoria\n",
+      "Lunds Universitet\n",
+      "Universiteit van Amsterdam\n",
+      "Uppsala Universitet\n",
+      "Seoul National University\n",
+      "Université de Lorraine\n",
+      "Universidad de Guadalajara\n",
+      "Rijksuniversiteit Groningen\n",
+      "Ryerson University\n",
+      "Aarhus Universitet\n",
+      "Boston College\n",
+      "Aalto-yliopisto\n",
+      "Rensselaer Polytechnic Institute\n",
+      "Drexel University\n",
+      "San José State University\n",
+      "University of North Texas\n",
+      "Keio University\n",
+      "Fordham University\n"
+     ]
+    }
+   ],
    "source": [
     "for uni in uni_names.name:\n",
     "    # make url -> fetch page -> parse html -> select the table on the sidebar\n",
     "    uni_wiki_url = \"https://en.wikipedia.org/wiki/\" + \"_\".join(uni.split(\" \"))\n",
     "    page = requests.get(uni_wiki_url)\n",
     "    soup = BeautifulSoup(page.content, 'html.parser')\n",
-    "    sidebar_table = soup.find_all('table', {\"class\": \"infobox vcard\"})[0]\n",
+    "    try:\n",
+    "        sidebar_table = soup.find_all('table', {\"class\": \"infobox vcard\"})[0]\n",
+    "    except IndexError: # Probably poorly structured page\n",
+    "        continue\n",
     "    \n",
     "    # key-value variable to store everything for one particular uni\n",
     "    juice = {\"name\" : uni}\n",
     "\n",
     "    # find url\n",
-    "    url = sidebar_table.find(\"span\", class_=\"url\")\n",
-    "    url = url.find(\"a\", href=True)\n",
-    "    juice['url'] = url['href']\n",
+    "    try:\n",
+    "        url = sidebar_table.find(\"span\", class_=\"url\")\n",
+    "        url = url.find(\"a\", href=True)\n",
+    "        juice['url'] = url['href']\n",
+    "    except AttributeError: # Can't find university URL\n",
+    "        continue\n",
     "    \n",
     "    try:\n",
     "        queries = ['locality', 'country-name', 'state']\n",
